--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,116 @@
-boto3==1.26.154
+accelerate==1.1.1
+aiodns==3.2.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiohttp-retry==2.9.1
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+async-timeout==4.0.3
+attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.0
+boto3==1.35.59
+botocore==1.35.59
+Brotli==1.1.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+cryptography==43.0.3
 diffusers==0.31.0
+dnspython==2.7.0
+email_validator==2.2.0
+exceptiongroup==1.2.2
+fastapi==0.115.5
+fastapi-cli==0.0.5
+filelock==3.16.1
+frozenlist==1.5.0
+fsspec==2024.10.0
+h11==0.14.0
+httpcore==1.0.6
+httptools==0.6.4
+httpx==0.27.2
+huggingface-hub==0.26.2
+idna==3.10
+importlib_metadata==8.5.0
+inquirerpy==0.3.4
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jmespath==1.0.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.1.0
+networkx==3.4.2
 numpy==2.1.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+orjson==3.10.11
+packaging==24.2
+paramiko==3.5.0
+peft==0.13.2
+pfzy==0.3.4
 pillow==11.0.0
+prettytable==3.12.0
+prompt_toolkit==3.0.48
+propcache==0.2.0
 protobuf==5.28.3
+psutil==6.1.0
+py-cpuinfo==9.0.0
+pycares==4.4.0
+pycparser==2.22
 pydantic==2.9.2
-pydub==0.25.1
+pydantic-extra-types==2.10.0
+pydantic-settings==2.6.1
+pydantic_core==2.23.4
+Pygments==2.18.0
+PyNaCl==1.5.0
 python-dateutil==2.9.0.post0
-pytz==2024.2
+python-dotenv==1.0.1
+python-multipart==0.0.17
+PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
+runpod==1.7.4
+s3transfer==0.10.3
 safetensors==0.4.5
+sentencepiece==0.2.0
+shellingham==1.5.4
 six==1.16.0
+sniffio==1.3.1
+starlette==0.41.2
+sympy==1.13.1
+tokenizers==0.20.3
+tomli==2.1.0
+tomlkit==0.13.2
 torch==2.5.1
-tqdm==4.66.6
-transformers==4.46.1
+tqdm==4.67.0
+tqdm-loggable==0.2
+transformers==4.46.2
+triton==3.1.0
+typer==0.13.0
+typing_extensions==4.12.2
+ujson==5.10.0
+urllib3==2.2.3
+uvicorn==0.32.0
+uvloop==0.21.0
+watchdog==6.0.0
+watchfiles==0.24.0
+wcwidth==0.2.13
+websockets==14.0
+yarl==1.17.1
+zipp==3.21.0
